--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adidas Shoes</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header>
@@ -51,6 +51,6 @@
     <footer>
         <p>&copy; 2024 Adidas Shoes</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="scripts2.js"></script>
 </body>
 </html>
