Update and rename web2.html to index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     <footer>
         <p>&copy; 2024 Adidas Shoes</p>
     </footer>
-    <script src="scripts2.js"></script>
+    <script src="scripts2.jss"></script>
 </body>
 </html>
